# anyblox_root

./: .gitignore  Cargo.toml  shell.nix  sources.txt
cpp/: CMakeLists.txt  main.cpp
cpp/lib/: rootbench.cpp
src/: anyroot.rs  lib.rs  main.rs
src/anyblox/: arrow.rs  interface.rs  metadata.rs  mod.rs  parse.rs  projection.rs  rowgroup.rs
src/anyroot/: file.rs  header.rs  object.rs  reader.rs  ttree.rs
src/core/: data_source.rs  file.rs  file_item.rs  mod.rs  parsers.rs  tkey.rs  types.rs
src/tests/: basic_io.rs
src/tree_reader/: branch.rs  container.rs  leafs.rs  mod.rs  tree.rs
tests/: read_simple.rs
