[package]
name = "anyroot"
version = "0.1.0"
edition = "2021"
description = "Stripped-down and updated version of https://github.com/cbourjau/alice-rs"

[dependencies]
bitflags = "1.0.0"
failure = "0.1"
flate2 = "^1"
nom = "^7"
lzma-rs = "0.1.1"
quote = "0.3.15"
uuid = "0.8.2"
lz4-compress = "0.1.1"
regex = "1.8.1"
arrow = { version = "54.2.0", features = [] }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
memmap = "0.7.0"

[target.'cfg(not(target_arch = "wasm32"))'.dev-dependencies]
criterion = "0.3"

[target.'cfg(target_arch = "wasm32")'.dev-dependencies]
wasm-bindgen = "0.2.60"
wasm-bindgen-test = "0.3.10"
web-sys = {"version" = "0.3.4", "features" = [ 'console' ]}

# Run with cargo bench --bench iter_branch -- --baseline pathbuf-in-container --color never
# [[bench]]
# name = "iter_branch"
# harness = false

# default binary which prints root file data
[[bin]]
name = "root_inspect"
